--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "botble/theme": "*@dev",
         "botble/widget": "*@dev",
         "doctrine/dbal": "^4.2",
+        "gehrisandro/tailwind-merge-laravel": "^1.3",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
